# ant-client

./: Cargo.toml  README.md
.claude/skills/e2e-node-management-test/: SKILL.md
.github/workflows/: ci.yml
ant-cli/: Cargo.toml
ant-cli/src/: cli.rs  main.rs
ant-cli/src/commands/data/: chunk.rs  file.rs
ant-cli/src/commands/node/: add.rs  daemon.rs  dismiss.rs  mod.rs  status.rs
ant-core/: Cargo.toml
ant-core/examples/: bench-quoting.rs
ant-core/src/: error.rs  update.rs
ant-core/src/data/: error.rs  mod.rs  network.rs  peer_cache.rs
ant-core/src/data/client/: adaptive.rs  batch.rs  cached_merkle.rs  cached_single.rs  chunk.rs  data.rs  file.rs  merkle.rs  mod.rs  payment.rs  quote.rs
ant-core/src/node/: binary.rs  devnet.rs  events.rs  mod.rs  registry.rs  types.rs
ant-core/src/node/daemon/: client.rs  disk.rs  health.rs  mod.rs  server.rs  supervisor.rs
ant-core/tests/: daemon_integration.rs  e2e_chunk.rs  e2e_cost_estimate.rs  e2e_file.rs  node_add_integration.rs
ant-core/tests/support/: mod.rs
docs/: node-management-architecture.md
docs/adr/: ADR-0002-client-fallback-for-full-node-shunning.md
scripts/: pi-reset.sh
