[workspace]
members = ["ant-core", "ant-cli"]
resolver = "2"

# Testnet build: ADR-011 authenticated leased relay-port reservations.
# ant-client has no direct saorsa deps (it goes through ant-protocol re-exports),
# but [patch.crates-io] overrides the whole transitive graph — so all three forks
# are pinned. The saorsa-core fork is what carries the client-side dial-failure
# cache self-heal (must be in the `ant` binary, per the V2-463 dep-skew lesson).
[patch.crates-io]
saorsa-transport = { git = "https://github.com/jacderida/saorsa-transport.git", rev = "acfd003442ec6d7a2ba8ae0933c37d2f9cbff90f" }  # branch: feat-consistent_relay_port
saorsa-core = { git = "https://github.com/jacderida/saorsa-core.git", rev = "3cf7e872877e4503662f9a5696bf76e42afbde31" }  # branch: feat-consistent_relay_port
ant-protocol = { git = "https://github.com/jacderida/ant-protocol.git", rev = "fe37cd675b423dea15b7db9844c5a119db28e34b" }  # branch: feat-consistent_relay_port
