[workspace]
members = ["ant-core", "ant-cli"]
resolver = "2"

# Testnet build (ADR-011 relay-port reservations): ant-core pins ant-node and
# ant-protocol directly to the rc PR branch commits (git deps), which pulls the
# whole fork lineage (saorsa-core + saorsa-transport rc). No [patch.crates-io]
# needed — git deps don't version-match, so the rc pre-releases resolve cleanly.
