[package]
name = "ant-core"
version = "0.1.1"
edition = "2021"

[dependencies]
# Node management
async-stream = "0.3"
axum = "0.8"
flate2 = "1"
fs2 = "0.4"
futures-core = "0.3"
futures-util = "0.3"
self-replace = "1"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
tar = "0.4"
tempfile = "3"
toml = "0.8"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
utoipa = { version = "5", features = ["axum_extras"] }
zip = "2"
tower-http = { version = "0.6.8", features = ["cors"] }

# Data operations
evmlib = "0.8"
xor_name = "5"
self_encryption = "0.35.0"
futures = "0.3"
postcard = { version = "1.1.3", features = ["use-std"] }
rmp-serde = "1"
hex = "0.4"
tracing = "0.1"
bytes = "1"
lru = "0.16"
rand = "0.8"
ant-node = { git = "https://github.com/jacderida/ant-node.git", branch = "feat/shard-consumer-instrumentation" }
saorsa-pqc = "0.5"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
# Vendored OpenSSL ensures openssl-sys links statically for musl targets.
# Without this, the musl CI builds fail because the runners lack musl-compatible
# OpenSSL dev libraries. Not needed on Windows (uses schannel via native-tls).
openssl = { version = "0.10", features = ["vendored"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_System_Console", "Win32_System_Threading"] }

[dev-dependencies]
serial_test = "3"
anyhow = "1"
alloy = { version = "1.6", features = ["node-bindings"] }
tokio-test = "0.4"

[[example]]
name = "start-local-devnet"
path = "examples/start-local-devnet.rs"

[[test]]
name = "e2e_chunk"
path = "tests/e2e_chunk.rs"

[[test]]
name = "e2e_data"
path = "tests/e2e_data.rs"

[[test]]
name = "e2e_file"
path = "tests/e2e_file.rs"

[[test]]
name = "e2e_payment"
path = "tests/e2e_payment.rs"

[[test]]
name = "e2e_security"
path = "tests/e2e_security.rs"

[[test]]
name = "unit_self_encrypt"
path = "tests/unit_self_encrypt.rs"

[[test]]
name = "merkle_unit"
path = "tests/merkle_unit.rs"

[[test]]
name = "e2e_merkle"
path = "tests/e2e_merkle.rs"

[[test]]
name = "e2e_huge_file"
path = "tests/e2e_huge_file.rs"

[[test]]
name = "e2e_upload_costs"
path = "tests/e2e_upload_costs.rs"
